# CcacheTest

./: CMakeLists.txt  LooperData.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProjectVersion.h  README.md  Sync.h
.github/workflows/: build_cmake.yml  cmake_ctest.yml
CMake/: Findjuce.cmake
Plugins/: CMakeLists.txt
Plugins/MASC/: CMakeLists.txt
Source/: LooperComponent.cpp  LooperComponent.h  LooperData.cpp  MidiProcessor.cpp  MidiProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
packaging/: dmg.json  installer.iss
